[gd_scene load_steps=4 format=3 uid="uid://d4mbovl0xhgfo"]

[ext_resource type="Script" path="res://AI/Base/new_ai_controller.gd" id="1_3pgn4"]
[ext_resource type="Script" path="res://AI/Base/DetectionArea.gd" id="2_5hwhd"]
[ext_resource type="Shape3D" uid="uid://dpvuqlxwkw00e" path="res://detection_shape.tres" id="3_wuvip"]

[node name="AIController" type="Node3D" groups=["Controller"]]
top_level = true
script = ExtResource("1_3pgn4")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
debug_enabled = true

[node name="DetectionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39248, 3.34015)
collision_layer = 0
collision_mask = 6
monitorable = false
script = ExtResource("2_5hwhd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = ExtResource("3_wuvip")

[node name="Node" type="Node" parent="."]

[node name="StrafeDirTimer" type="Timer" parent="Node"]
process_callback = 0
wait_time = 5.0
one_shot = true

[node name="BackUpTimer" type="Timer" parent="Node"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="ChangeMovementTimer" type="Timer" parent="Node"]
process_callback = 0
one_shot = true

[node name="FleeTimer" type="Timer" parent="Node"]
process_callback = 0
wait_time = 5.0
one_shot = true

[node name="PunchAnimTimer" type="Timer" parent="Node"]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="ForgetTarget" type="Timer" parent="Node"]
wait_time = 5.0
one_shot = true

[node name="TargetThinkTimer" type="Timer" parent="Node"]
wait_time = 0.2
one_shot = true

[node name="PunchThinkTimer" type="Timer" parent="Node"]
process_callback = 0
one_shot = true

[node name="FireThinkTimer" type="Timer" parent="Node"]
process_callback = 0
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="DetectionArea" method="_on_body_entered" flags=18]
[connection signal="body_exited" from="DetectionArea" to="DetectionArea" method="_on_body_exited" flags=18]
[connection signal="timeout" from="Node/FleeTimer" to="." method="stop_fleeing" flags=18]
[connection signal="timeout" from="Node/PunchThinkTimer" to="." method="punch" flags=18]
[connection signal="timeout" from="Node/FireThinkTimer" to="." method="fire" flags=18]
